# mw-mhd-integration

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  example.env  pyproject.toml
.github/workflows/: python-publish.yml
mw2mhd/: __init__.py  config.py  cv_mapping_table.csv
mw2mhd/commands/: cli.py  create_mhd_file.py
mw2mhd/v0_1/legacy/: builder.py  convertor.py  mw_utils.py
scripts/: create_mhd_file.py  utils.py
tests/mhd_announcement/legacy/: ST000253.announcement.json  ST001315.announcement.json  ST002238.announcement.json  ST004122.announcement.json  ST004186.announcement.json
tests/mhd_dataset/: ST000253.mhd.json  ST001315.mhd.json  ST002238.mhd.json  ST004083.mhd.json  ST004122.mhd.json  ST004186.mhd.json
tests/mhd_dataset/legacy/: ST000253.announcement.json  ST000253.mhd.json  ST001315.announcement.json  ST001315.mhd.json  ST002238.announcement.json  ST002238.mhd.json  ST004122.announcement.json  ST004122.mhd.json  ST004186.announcement.json  ST004186.mhd.json
tests/mw2mhd/: test_cli_commands.py
tests/mw_dataset/: ST000253.json  ST000253_metabolites.json  ST001315.json  ST001315_metabolites.json  ST002238.json  ST004083.json  ST004122.json  ST004122_metabolites.json  ST004186.json  ST004186_metabolites.json
