[project]
name = "mw-mhd-integration"
version = "0.0.23"
description = "Metabolomics Workbench - Metabolomics Hub Integration"
authors = [{"name" = "Metabolomics Workbench Team", "email" = "help@metabolomicsworkbench.org"}]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mhd-model>=0.1.74",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "xmltodict>=0.15.1",
]


[dependency-groups]
dev = [
    "commitizen>=4.8.3",
    "import-linter>=2.3",
    "mkdocs-material>=9.5.49",
    "pre-commit>=4.2.0",
    "ruff>=0.12.0",
    "pytest>=9.0.2",
    "pytest-cov>=6.2.1",
]

[project.scripts]
mw-mhd-cli = "mw2mhd.commands.cli:cli"

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "uv"
version = "0.0.23"
tag_format = "v$major.$minor.$patch"
version_files = [
    "pyproject.toml:version",
    "mw2mhd/__init__.py:__version__",
]
bump_message = "bump: version $current_version -> $new_version"
update_changelog_on_bump = true

[tool.pytest.ini_options]
addopts = "-ra -q -v"
testpaths = [
    "tests"
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mw2mhd*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"mw2mhd" = ["**/*.json", "**/*.tsv", "**/*.csv"]

[tool.ruff.lint]
extend-select = ["E4", "E7", "E9", "F", "I", "G", "SLF", "PTH", "Q", "T"]
ignore = [ "ANN401"]

fixable = ["ALL"]



[tool.importlinter]
include_external_packages = true
root_packages = ["mw2mhd"]
